version/0.27/_sources/api/solver/_autosummary/settings/fluxes.rst.txt
:orphan:

.. _fluxes:

fluxes
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.fluxes
    :show-inheritance:

.. rubric:: Methods

========================================================   =====================================================

Method                                                                                                   Summary

========================================================   =====================================================
:ref:`mass_flow <mass_flow_1>`                                       Print mass flow rate at inlets and outlets.

:ref:`heat_transfer <heat_transfer>`                                     Print heat transfer rate at boundaries.

:ref:`heat_transfer_sensible <heat_transfer_sensible>`          Print sensible heat transfer rate at boundaries.

:ref:`radiation_heat_transfer <radiation_heat_transfer>`       Print radiation heat transfer rate at boundaries.

:ref:`film_mass_flow <film_mass_flow>`                                  Print film mass flow rate at boundaries.

:ref:`film_heat_transfer <film_heat_transfer>`                      Print film heat transfer rate at boundaries.

:ref:`electric_current <electric_current>`                            Print electric current rate at boundaries.

:ref:`pressure_work <pressure_work_1>`                            Print pressure work rate at moving boundaries.

:ref:`viscous_work <viscous_work>`                                        Print viscous work rate at boundaries.

========================================================   =====================================================

.. rubric:: Included in:

==========================   ======================================================================================================================================================================================

Parent                                                                                                                                                                                                      Summary

==========================   ======================================================================================================================================================================================
:ref:`report_2 <report_2>`       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

==========================   ======================================================================================================================================================================================

